@@ -56,7 +56,7 @@
                   (write-region "" nil f nil 'silent nil))
                 (throw 'done f))
             (file-already-exists t)))))))
-    
+
 
 ;; Here I depart from the inferior-haskell- prefix.
 ;; Not sure if it's a good idea.
@@ -76,7 +76,7 @@ The command can include arguments."
   :type '(choice string (repeat string)))
 
 (defconst inferior-haskell-info-xref-re
-  "\t-- Defined at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)$")
+  "\t-- Defined at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)\\(?:-\\([0-9]+\\)\\)?$")
 
 (defconst inferior-haskell-module-re
   "\t-- Defined in \\(.+\\)$"
@@ -111,7 +111,7 @@ The command can include arguments."
           ("imported from .* at \\(.+\\):\\([0-9]+\\):\\([0-9]+\\)-\\([0-9]+\\)$"
            1 2 (3 . 4) 0)
           ;; Info xrefs.
-          (,inferior-haskell-info-xref-re 1 2 3 0))))
+          (,inferior-haskell-info-xref-re 1 2 (3 . 4) 0))))
   "Regexps for error messages generated by inferior Haskell processes.
 The format should be the same as for `compilation-error-regexp-alist'.")
 
@@ -286,8 +286,8 @@ The process PROC should be associated to a comint buffer."
                     (message "Ignoring inconsistent `module' info: %s in %s"
                              module buffer-file-name)
                     nil)))))))))
-                    
-                    
+
+
 
 ;;;###autoload
 (defun inferior-haskell-load-file (&optional reload)
@@ -474,8 +474,8 @@ The returned info is cached for reuse by `haskell-doc-mode'."
 
 ;;; Functions to find the documentation of a given function.
 ;;
-;; TODO for this section: 
-;; 
+;; TODO for this section:
+;;
 ;; * Support fetching of local Haddock docs pulled directly from source files.
 ;; * Display docs locally? w3m?
 
@@ -522,7 +522,7 @@ By default this is set to `ghc --print-libdir`/package.conf."
   "Fetch the module in which SYM is defined."
   (let ((info (inferior-haskell-info sym)))
     (unless (string-match inferior-haskell-module-re info)
-      (error 
+      (error
        "No documentation information available. Did you forget to C-c C-l?"))
     (match-string-no-properties 1 info)))
 
